Changelog
=========

2.4 - Unreleased
----------------

* Add a hook in the hosting template to not show the summary. This
  can be used by derived templates that want to show their own summary
  or show it at a later point.
  [wichert]

* Set default Plone version to 3.1.3.
  [wichert]

* Added kss plugin template
  [gotcha, jfroche, adrien01]

* Silva layout have been merged with Silva all in the development
  buildout.
  [thefunny]

2.3 - June 24, 2008
-------------------

* Fix problem in the hosting template: varnish was always enabled
  even if not desired.
  [wichert]

* Added ZopeSkel test layer with the apropriate testSetup and testTearDown.
  The steps in the top of each test file is not anymore needed: delete 
  tempdir/plone.example and then cd to tempdir.
  [mustapha]

* Make the zope2product option in the archetype template default to true.
  [mustapha]

* Modified buildout.cf to only test zopeskel.
  [mustapha]

* Fixed the paster test function: overwrite option should default to True for
  the create command.
  [mustapha]

* Added ``use_local_commands`` attribute (a la use_cheetah). A zopeskel
  template that wants to use local commands has to set it to True .
  [mustapha]

* Get rid of zopeskel.txt and use setup.cfg to store the parent template name.
  [mustapha]

* Sub-templates may define a parent_template attribute with the list of 
  templates that can use it.
  [mustapha]

* Fixed tests and updated docs.
  [mustapha]

Version 2.2
-----------

* Install Plone 3.1.2 by default.
  [wichert]

* Remove useless spans from the portlet template.
  [wichert]

* Add supervisorctl configuration.
  [wichert]


Version 2.1
-----------

* Revert BaseTemplate usage from the hosting template (changeset
  57368 from Tarek). It was not used and broke the buildout. This fixes
  http://plone.org/products/zopeskel/issues/8
  [wichert]

* Replace the generic README in the plone_hosting template with documentation
  that is important for deployments. 
  [wichert]
